# ALF_CpHMD

./: .gitignore  .gitmodules  LICENSE  README.md  bless.out  bless.sh  minimize_setup.slurm  pyproject.toml  simulation_cphmd_1.inp
cphmd/: __init__.py  __main__.py
cphmd/analysis/: __init__.py  alf_dashboard.py  dca.py  energy_profiles.py  henderson_hasselbalch.py  ldin_parser.py  legacy_lmd_io.py  pka_analyzer.py  pka_data.py  pka_fitting.py  pka_plots.py  plot_style.py  population_convergence.py  rmsd_convergence_plot.py  volume.py  wham_profiles.py
examples/: README.md  _run_native_alf.sh  _run_native_rank.sh  _setup_workflow.py
scripts/: analyze_gshift_validation.py  check_no_legacy_chunk_sbatch.py  contacts.ipynb  lambda_converter.py  lambda_converter_single.py  parquet_reducer.py  pka_postanalysis.ipynb  run_alf.sh  run_pme_gpu.job  step1_CreateAA.py  step2_solvate.py  step3_patching.py  step3_patching_old.py  step4_ALF copy.py  step4_ALF.py  step4_ALF_old.py  step5_bias_search.py  step8_block.py  step8_block.str  step9_Volume.py  validate_fused_wham.py
specs/: 2026-03-13-wham-fused-dlnz-cublas-dgemm.md
tests/: __init__.py  conftest.py  test_alf.py  test_bias_guesser.py  test_bias_guesser_integration.py  test_charmm_utils.py  test_ewbs.py  test_native_analyzer.py  test_phase_transition.py  test_replica_ph.py  test_utils.py  test_wham_fused.py
toppar/: __init__.py
toppar_my/: ext_aa.str  ligands.str  protpatch_protein_segments_c22.str
variables/: var-arg.txt  var-asp.txt  var-cys.txt  var-glu.txt  var-hsp.txt  var-lys.txt  var-ser.txt  var-tyr.txt
(+285 files in other folders)
